<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_menu_switcher"
        android:title="@string/menu_switcher">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_enable"
            android:summary="@string/enable_sum"
            android:title="@string/enable_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_menu_config"
        android:title="@string/menu_config">
        <Preference
            android:key="pref_app_config"
            android:summary="@string/app_config_sum"
            android:title="@string/app_config_title" />
        <Preference
            android:key="pref_charging_led"
            android:summary="@string/charging_led_sum"
            android:title="@string/charging_led_title" />
        <CheckBoxPreference
            android:key="pref_screenon_enable"
            android:summary="@string/screenon_enable_sum"
            android:title="@string/screenon_enable_title" />
        <CheckBoxPreference
            android:key="pref_cyclingled_enable"
            android:summary="@string/cyclingled_enable_sum"
            android:title="@string/cyclingled_enable_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_menu_misc"
        android:title="@string/menu_misc">
        <CheckBoxPreference
            android:key="pref_sleep"
            android:summary="@string/sleep_sum"
            android:title="@string/sleep_title" />
        <com.haoutil.xposed.xled.model.TimePreference
            android:key="pref_sleep_start"
            android:summary="@string/sleep_start_sum"
            android:title="@string/sleep_start_title" />
        <com.haoutil.xposed.xled.model.TimePreference
            android:key="pref_sleep_end"
            android:summary="@string/sleep_end_sum"
            android:title="@string/sleep_end_title" />
        <CheckBoxPreference
            android:key="pref_debug"
            android:summary="@string/enable_debug_sum"
            android:title="@string/enable_debug_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_icon"
            android:summary="@string/enable_icon_sum"
            android:title="@string/enable_icon_title" />
        <Preference
            android:key="pref_backup"
            android:summary="@string/backup_sum"
            android:title="@string/backup_title" />
        <Preference
            android:key="pref_restore"
            android:summary="@string/restore_sum"
            android:title="@string/restore_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_menu_about"
        android:title="@string/menu_about">
        <Preference
            android:key="pref_app_info"
            android:title="@string/app_info_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_info_mailto" />
        </Preference>
        <Preference
            android:key="prefs_app_help"
            android:summary="@string/app_help_sum"
            android:title="@string/app_help_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_help_url" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>