<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_menu_switcher"
        android:title="@string/menu_switcher">
        <CheckBoxPreference
            android:key="pref_charging_enable"
            android:summary="@string/charging_enable_sum"
            android:title="@string/charging_enable_title" />
        <CheckBoxPreference
            android:enabled="false"
            android:key="pref_low_disable"
            android:summary="@string/low_disable_sum"
            android:title="@string/low_disable_title" />
        <CheckBoxPreference
            android:enabled="false"
            android:key="pref_charging_low_disable"
            android:summary="@string/charging_low_disable_sum"
            android:title="@string/charging_low_disable_title" />
        <CheckBoxPreference
            android:enabled="false"
            android:key="pref_charging_medium_disable"
            android:summary="@string/charging_medium_disable_sum"
            android:title="@string/charging_medium_disable_title" />
        <CheckBoxPreference
            android:enabled="false"
            android:key="pref_charging_full_disable"
            android:summary="@string/charging_full_disable_sum"
            android:title="@string/charging_full_disable_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_menu_config"
        android:title="@string/menu_config">
        <Preference
            android:key="pref_charging_low_color"
            android:summary="@string/charging_low_color_sum"
            android:title="@string/charging_low_color_title" />
        <Preference
            android:key="pref_charging_medium_color"
            android:summary="@string/charging_medium_color_sum"
            android:title="@string/charging_medium_color_title" />
        <Preference
            android:key="pref_charging_full_color"
            android:summary="@string/charging_full_color_sum"
            android:title="@string/charging_full_color_title" />
        <com.haoutil.xposed.xled.model.IntEditTextPreference
            android:digits="0123456789"
            android:inputType="number"
            android:key="pref_charging_onms"
            android:maxLength="9"
            android:summary="@string/charging_onms_sum"
            android:title="@string/charging_onms_title" />
        <com.haoutil.xposed.xled.model.IntEditTextPreference
            android:digits="0123456789"
            android:inputType="number"
            android:key="pref_charging_offms"
            android:maxLength="9"
            android:summary="@string/charging_offms_sum"
            android:title="@string/charging_offms_title" />
        <com.haoutil.xposed.xled.model.IntEditTextPreference
            android:digits="0123456789"
            android:inputType="number"
            android:key="pref_charging_percent_low"
            android:maxLength="3"
            android:summary="@string/charging_percent_low_sum"
            android:title="@string/charging_percent_low_title" />
        <com.haoutil.xposed.xled.model.IntEditTextPreference
            android:digits="0123456789"
            android:inputType="number"
            android:key="pref_charging_percent_full"
            android:maxLength="3"
            android:summary="@string/charging_percent_full_sum"
            android:title="@string/charging_percent_full_title" />
    </PreferenceCategory>

</PreferenceScreen>