<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_menu_switcher"
        android:title="@string/menu_switcher">
        <CheckBoxPreference
            android:key="pref_enable"
            android:persistent="false"
            android:summary="@string/enable_app_sum"
            android:title="@string/enable_app_title" />
        <CheckBoxPreference
            android:enabled="false"
            android:key="pref_disable_led"
            android:persistent="false"
            android:summary="@string/disable_led_sum"
            android:title="@string/disable_led_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_menu_config"
        android:title="@string/menu_config">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_forceenable"
            android:persistent="false"
            android:summary="@string/app_forceenable_sum"
            android:title="@string/app_forceenable_title" />

        <Preference
            android:key="pref_color"
            android:summary="@string/app_led_color_sum"
            android:title="@string/app_led_color_title" />

        <EditTextPreference
            android:digits="0123456789"
            android:inputType="number"
            android:key="pref_onms"
            android:maxLength="9"
            android:persistent="false"
            android:summary="@string/app_led_onms_sum"
            android:title="@string/app_led_onms_title" />
        <EditTextPreference
            android:digits="0123456789"
            android:inputType="number"
            android:key="pref_offms"
            android:maxLength="9"
            android:persistent="false"
            android:summary="@string/app_led_offms_sum"
            android:title="@string/app_led_offms_title" />

        <Preference
            android:key="pref_reset"
            android:summary="@string/app_reset_sum"
            android:title="@string/app_reset_title" />
    </PreferenceCategory>

</PreferenceScreen>